use html imports for these libs

--- a/src/collectionHelpers.html
+++ b/src/collectionHelpers.html
@@ -1,3 +1,4 @@
+<script>
 class CollectionHelpers {
     constructor(data) {
         this.store = data.slice();
@@ -47,3 +48,4 @@ class CollectionHelpers {
         }
     }
 }
+</script>
