--- a/src/weakCache.html
+++ b/src/weakCache.html
@@ -1,3 +1,4 @@
+<script>
 /*
  IMPORTANT: Right now this Cache is **not** weak in the sense that it discards items based memory pressure, however
  it is written in a way that will allow this later to be added without rewriting the rest of the code and right now
@@ -37,3 +38,4 @@ class WeakCache {
 		this.keys.splice(index, 1);
 	}
 }
+</script>
